<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="dominando.android.presentation.BookDetailsViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:id="@+id/imgCover"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:background="#CCC"
                android:contentDescription="@string/cont_desc_book_cover"
                android:scaleType="centerInside"
                app:imageUrl="@{viewModel.book.coverUrl}" />

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewModel.book.title}"
                android:textColor="@{viewModel.book.available ? @color/black : @color/red}"
                android:textSize="24sp"
                tools:text="@sample/books.json/data/title" />

            <TextView
                android:id="@+id/txtAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewModel.book.author}"
                android:textSize="20sp"
                tools:text="@sample/books.json/data/author" />

            <TextView
                android:id="@+id/txtPages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{@string/text_format_book_pages(viewModel.book.pages)}"
                tools:text="@sample/books.json/data/pages" />

            <TextView
                android:id="@+id/txtYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{@string/text_format_book_year(viewModel.book.year)}"
                tools:text="@sample/books.json/data/year" />

            <TextView
                android:id="@+id/txtPublisher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewModel.book.publisher.name}"
                tools:text="@sample/books.json/data/publisher/name" />

            <TextView
                android:id="@+id/txtAvailable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewModel.book.available ? @string/text_book_available : @string/text_book_unavailable}"
                tools:text="@sample/books.json/data/available" />

            <TextView
                android:id="@+id/txtMediaType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewModel.book.mediaType}"
                tools:text="@sample/books.json/data/mediaType" />

            <RatingBar
                android:id="@+id/rtbRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:isIndicator="true"
                android:rating="@{viewModel.book.rating}"
                tools:text="@sample/books.json/data/rating" />
        </LinearLayout>
    </ScrollView>
</layout>
