<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_edit_book"
        android:icon="@drawable/ic_edit"
        android:title="@string/menu_action_edit"
        app:showAsAction="always|withText" />
</menu>
